--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": false,
     "skipLibCheck": true,
     "strict": true,
@@ -18,9 +14,7 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     },
     "incremental": true,
     "plugins": [
@@ -35,11 +29,9 @@
     "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
-  "exclude": {
-  "compilerOptions": { /* ...igual que ya tienes... */ },
-  "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", ".next/types/**/*.ts"],
-  "exclude": [".next", "node_modules"]
+  "exclude": [
+    "node_modules",
+    ".next",
+    "out"
+  ]
 }
-
-}
-
