--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,11 +24,12 @@
     ]
   },
   "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "next-env.d.ts",
-    ".next/types/**/*.ts"
-  ],
+  "**/*.ts",
+  "**/*.tsx",
+  "next-env.d.ts",
+  ".next/types/**/*.ts",
+  "next-intl.config.ts"
+],
   "exclude": [
     "node_modules",
     ".next",
