--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "next": "15.5.0",
     "next-intl": "^4.3.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
